tests/precess-tests/expectations/fail/ref_not_exists.typ.expectation
#Contains

Proposition is false: `check(∆.v, ∆.T)` because `v` is undefined in the current context